@@ -2,32 +2,15 @@ package nl.nn.adapterframework.pipes;
 
 import static org.junit.Assert.assertEquals;
 
-import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
-import javax.wsdl.WSDLException;
-
-import org.junit.After;
 import org.junit.Ignore;
 import org.junit.Test;
-import org.mockito.Mockito;
-import org.xml.sax.SAXException;
 
-import nl.nn.adapterframework.configuration.BasicAdapterServiceImpl;
-import nl.nn.adapterframework.configuration.Configuration;
 import nl.nn.adapterframework.configuration.ConfigurationException;
-import nl.nn.adapterframework.configuration.IbisContext;
-import nl.nn.adapterframework.configuration.IbisManager;
-import nl.nn.adapterframework.core.Adapter;
-import nl.nn.adapterframework.core.IAdapter;
-import nl.nn.adapterframework.core.IPipeLineSession;
 import nl.nn.adapterframework.core.PipeForward;
-import nl.nn.adapterframework.core.PipeLine;
-import nl.nn.adapterframework.core.PipeLineExit;
-import nl.nn.adapterframework.core.PipeLineSessionBase;
-import nl.nn.adapterframework.core.PipeRunException;
-import nl.nn.adapterframework.unmanaged.DefaultIbisManager;
+import nl.nn.adapterframework.core.PipeLineSession;
 import nl.nn.adapterframework.validation.ValidatorTestBase;
 import nl.nn.adapterframework.validation.XmlValidatorException;
 
@@ -36,7 +19,7 @@ import nl.nn.adapterframework.validation.XmlValidatorException;
   * @author Michiel Meeuwissen
  */
 
-public class WsdlXmlValidatorTest extends Mockito {
+public class WsdlXmlValidatorTest extends PipeTestBase<WsdlXmlValidator> {
     private static final String SIMPLE                = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/SimpleWsdl/simple.wsdl";
     private static final String SIMPLE_WITH_INCLUDE   = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/SimpleWsdl/simple_withinclude.wsdl";
     private static final String SIMPLE_WITH_REFERENCE = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/SimpleWsdl/simple_withreference.wsdl";
@@ -44,60 +27,68 @@ public class WsdlXmlValidatorTest extends Mockito {
     private static final String DOUBLE_BODY           = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/GetPolicyDetails/GetPolicyDetailsDoubleBody.wsdl";
     private static final String BASIC                 = ValidatorTestBase.BASE_DIR_VALIDATION+"/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl";
 
-    private IPipeLineSession session = mock(IPipeLineSession.class);
+	@Override
+	public WsdlXmlValidator createPipe() {
+		return new WsdlXmlValidator();
+	}
 
     @Test
-    public void wsdlValidate() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+    public void wsdlValidate() throws Exception {
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE);
         val.setSoapBody("TradePriceRequest");
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
         val.configure();
+        val.start();
         val.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\"><Body><TradePriceRequest xmlns=\"http://example.com/stockquote.xsd\"><tickerSymbol>foo</tickerSymbol></TradePriceRequest></Body></Envelope>", session);
     }
 
     @Test
-    public void wsdlValidateWithInclude() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+    public void wsdlValidateWithInclude() throws Exception {
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE_WITH_INCLUDE);
         val.setSoapBody("TradePriceRequest");
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
         val.configure();
+        val.start();
         val.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\"><Body><TradePriceRequest xmlns=\"http://example.com/stockquote.xsd\"><tickerSymbol>foo</tickerSymbol></TradePriceRequest></Body></Envelope>", session);
     }
 
     @Test
-    public void wsdlValidateWithReference() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+    public void wsdlValidateWithReference() throws Exception {
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE_WITH_REFERENCE);
         val.setSoapBody("TradePriceRequest");
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
         val.configure();
+        val.start();
         val.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\"><Body><TradePriceRequest xmlns=\"http://example.com/stockquote.xsd\"><tickerSymbol>foo</tickerSymbol></TradePriceRequest></Body></Envelope>", session);
     }
 
     @Test(expected = XmlValidatorException.class)
-    public void wsdlValidateWithReferenceFail() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+    public void wsdlValidateWithReferenceFail() throws Exception {
+        WsdlXmlValidator val = pipe;
         val.setWsdl(SIMPLE_WITH_REFERENCE);
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
         val.configure();
+        val.start();
         val.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\"><Body><TradePriceRequest xmlns=\"http://example.com/stockquote.xsd\"><tickerSymbolERROR>foo</tickerSymbolERROR></TradePriceRequest></Body></Envelope>", session);
     }
 
     @Test
-    public void wsdlTibco() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+    public void wsdlTibco() throws Exception {
+        WsdlXmlValidator val = pipe;
         val.setWsdl(TIBCO);
         val.setSoapHeader("MessageHeader");
         val.setSoapBody("Request");
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
         val.configure();
+        val.start();
         val.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\">\n" +
                 "  <Header>\n" +
                 "    <MessageHeader xmlns=\"http://www.ing.com/CSP/XSD/General/Message_2\">\n" +
@@ -128,12 +119,13 @@ public class WsdlXmlValidatorTest extends Mockito {
     }
 
     @Test(expected = XmlValidatorException.class)
-    public void wsdlTibcoFailEnvelop() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+    public void wsdlTibcoFailEnvelop() throws Exception {
+        WsdlXmlValidator val = pipe;
         val.setWsdl(TIBCO);
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
         val.configure();
+        val.start();
         val.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\">\n" +
                 "  <BodyERROR>\n" +
                 "    <MessageHeader xmlns=\"http://www.ing.com/CSP/XSD/General/Message_2\">\n" +
@@ -162,12 +154,13 @@ public class WsdlXmlValidatorTest extends Mockito {
     }
 
     @Test(expected = XmlValidatorException.class)
-    public void wsdlTibcoFailMessage() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-        WsdlXmlValidator val = new WsdlXmlValidator();
+    public void wsdlTibcoFailMessage() throws Exception {
+        WsdlXmlValidator val = pipe;
         val.setWsdl(TIBCO);
         val.setThrowException(true);
         val.registerForward(new PipeForward("success", null));
         val.configure();
+        val.start();
         val.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\">\n" +
                 "  <Body>\n" +
                 "    <MessageHeader xmlns=\"http://www.ing.com/CSP/XSD/General/Message_2\">\n" +
@@ -195,17 +188,17 @@ public class WsdlXmlValidatorTest extends Mockito {
                 "", session);
     }
 
-    @Ignore("Travis has problems with this")
-    @Test
-	public void wsdlReasonSessionKey() throws ConfigurationException,
-			XmlValidatorException, PipeRunException {
-		WsdlXmlValidator val = new WsdlXmlValidator();
+	@Ignore("Travis has problems with this")
+	@Test
+	public void wsdlReasonSessionKey() throws Exception {
+		WsdlXmlValidator val = pipe;
 		val.setWsdl(SIMPLE);
 		val.setSoapBody("TradePriceRequest");
 		val.setForwardFailureToSuccess(true);
 		val.registerForward(new PipeForward("success", null));
 		val.configure();
-		IPipeLineSession pls = new PipeLineSessionBase();
+		val.start();
+		PipeLineSession pls = new PipeLineSession();
 		val.validate("<xml/>", pls);
 		List<String> lines = Arrays.asList(
 				((String) pls.get(val.getReasonSessionKey())).split("\\r?\\n"));
@@ -218,8 +211,8 @@ public class WsdlXmlValidatorTest extends Mockito {
 	}
 
 	@Test(expected = ConfigurationException.class)
-	public void wSoapBodyExistsMultipleTimes() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-		WsdlXmlValidator val = new WsdlXmlValidator();
+	public void wSoapBodyExistsMultipleTimes() throws Exception {
+		WsdlXmlValidator val = pipe;
 		val.setWsdl(DOUBLE_BODY);
 		val.setSoapHeader("MessageHeader");
 		val.setSoapBody("GetPolicyDetails_Request");
@@ -231,81 +224,54 @@ public class WsdlXmlValidatorTest extends Mockito {
 	}
 
 	@Test
-	public void warnSchemaLocationAlreadyDefaultValue() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-		// Mock a configuration with an adapter in it
-		IbisManager ibisManager = spy(new DefaultIbisManager());
-		ibisManager.setIbisContext(spy(new IbisContext()));
-		Configuration configuration = new Configuration(new BasicAdapterServiceImpl());
-		configuration.setName("dummyConfiguration");
-		configuration.setVersion("1");
-		configuration.setIbisManager(ibisManager);
+	public void warnSchemaLocationAlreadyDefaultValue() throws Exception {
+		pipe.setWsdl(BASIC);
+		pipe.setSoapHeader("MessageHeader");
+		pipe.setSoapBody("GetPolicyDetails_Request");
+		pipe.setAddNamespaceToSchema(true);
+		pipe.setSchemaLocation("http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2 http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 ");
+		pipe.setThrowException(true);
+		pipe.registerForward(new PipeForward("success", null));
+		configureAndStartPipe();
 
-		IAdapter adapter = spy(new Adapter());
-		adapter.setName("dummy");
-		PipeLine pl = new PipeLine();
-		pl.setFirstPipe("dummy");
-
-		WsdlXmlValidator val = new WsdlXmlValidator();
-		val.setName("dummy");
-		val.setWsdl(BASIC);
-		val.setSoapHeader("MessageHeader");
-		val.setSoapBody("GetPolicyDetails_Request");
-		val.setAddNamespaceToSchema(true);
-		val.setSchemaLocation("http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2 http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 ");
-		val.setThrowException(true);
-		val.registerForward(new PipeForward("success", null));
-
-		pl.addPipe(val);
-		PipeLineExit ple = new PipeLineExit();
-		ple.setPath("success");
-		ple.setState("success");
-		pl.registerPipeLineExit(ple);
-		adapter.registerPipeLine(pl);
-
-		adapter.setConfiguration(configuration);
-		configuration.registerAdapter(adapter);
-
-		assertEquals(1, configuration.getConfigurationWarnings().size());
-		assertEquals("Pipe [dummy] attribute [schemaLocation] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl] already has a default value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2]", configuration.getConfigurationWarnings().getFirst());
+		assertEquals(1, getConfigurationWarnings().size());
+		assertEquals("WsdlXmlValidator [WsdlXmlValidator under test] attribute [schemaLocation] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl] already has a "
+				+ "default value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2]", 
+				getConfigurationWarnings().get(0));
 	}
 
 	@Test
-	public void warnUseSoapBodyNameSpace() throws IOException, PipeRunException, SAXException, WSDLException, ConfigurationException, XmlValidatorException {
-		// Mock a configuration with an adapter in it
-		IbisManager ibisManager = spy(new DefaultIbisManager());
-		ibisManager.setIbisContext(spy(new IbisContext()));
-		Configuration configuration = new Configuration(new BasicAdapterServiceImpl());
-		configuration.setName("dummyConfiguration");
-		configuration.setVersion("1");
-		configuration.setIbisManager(ibisManager);
+	public void warnUseSoapBodyNameSpace() throws Exception {
+		pipe.setWsdl(BASIC);
+		pipe.setSoapHeader("MessageHeader");
+		pipe.setSoapBody("GetPolicyDetails_Request");
+		pipe.setAddNamespaceToSchema(true);
+		pipe.setSchemaLocation("http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/2 schema2");
+		pipe.setThrowException(true);
+		pipe.registerForward(new PipeForward("success", null));
+		configureAndStartPipe();
 
-		IAdapter adapter = spy(new Adapter());
-		adapter.setName("dummy");
-		PipeLine pl = new PipeLine();
-		pl.setFirstPipe("dummy");
+		assertEquals(1, getConfigurationWarnings().size());
+		assertEquals("WsdlXmlValidator [WsdlXmlValidator under test] use attribute [soapBodyNamespace] instead of attribute [schemaLocation] with value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1"
+				+ " http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl]", 
+				getConfigurationWarnings().get(0));
+	}
+	
+	@Test
+	public void warnSetAddNamespaceToSchemaTrue() throws Exception {
+		pipe.setWsdl(SIMPLE);
+		pipe.setSoapBody("TradePriceRequest");
+		pipe.setSchemaLocation("dummy schema1");
+		pipe.setThrowException(true);
+		pipe.registerForward(new PipeForward("success", null));
+		configureAndStartPipe();
 
-		WsdlXmlValidator val = new WsdlXmlValidator();
-		val.setName("dummy");
-		val.setWsdl(BASIC);
-		val.setSoapHeader("MessageHeader");
-		val.setSoapBody("GetPolicyDetails_Request");
-		val.setAddNamespaceToSchema(true);
-		val.setSchemaLocation("http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/2 schema2");
-		val.setThrowException(true);
-		val.registerForward(new PipeForward("success", null));
-
-		pl.addPipe(val);
-		PipeLineExit ple = new PipeLineExit();
-		ple.setPath("success");
-		ple.setState("success");
-		pl.registerPipeLineExit(ple);
-		adapter.registerPipeLine(pl);
-
-		adapter.setConfiguration(configuration);
-		configuration.registerAdapter(adapter);
-
-		assertEquals(1, configuration.getConfigurationWarnings().size());
-		assertEquals("Pipe [dummy] use attribute [soapBodyNamespace] instead of attribute [schemaLocation] with value [http://ibissource.org/XSD/Generic/MessageHeader/2 schema1 http://ibissource.org/XSD/LifeRetailCB/PolicyJuice/1/GetPolicyDetails/1 schema2] for wsdl [/Validation/Wsdl/GetPolicyDetails/GetPolicyDetails.wsdl]", configuration.getConfigurationWarnings().getFirst());
+		assertEquals(1, getConfigurationWarnings().size());
+		assertEquals("WsdlXmlValidator [WsdlXmlValidator under test] attribute [schemaLocation] for wsdl [/Validation/Wsdl/SimpleWsdl/simple.wsdl]"
+				+ " should only be set when addNamespaceToSchema=true", 
+				getConfigurationWarnings().get(0));
+		
+        pipe.validate("<Envelope xmlns=\"http://schemas.xmlsoap.org/soap/envelope/\"><Body><TradePriceRequest xmlns=\"http://example.com/stockquote.xsd\"><tickerSymbol>foo</tickerSymbol></TradePriceRequest></Body></Envelope>", session);
 	}
 }
 
